Fix stretching cards

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -161,8 +161,8 @@ footer {
   border-left: 1px solid #bababa;
 }
 
-.btn-primary {
-  
+.card {
+  max-width: 326px;
 }
 // nav#filter.fixed-top {
 //   top: 150px;
